# breast-cancer-mlops-workflow

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: main.yml
config/: Dockerfile.api  Dockerfile.streamlit  docker-compose.yml
notebooks/: 1.0-EDA.ipynb  2.0-Data_preprocessing.ipynb  3.0-Feature-engineering.ipynb  4.0-Model_Experimentation.ipynb
src/: app.py  data_preprocessing.py  model.py  model_inference.py  model_training.py  pipeline_utils.py  schemas.py  streamlit_app.py
src/model/: data_ingestion.py  data_preprocessing.py  model_inference.py  model_training.py  pipeline_utils.py
tests/: bash_test.sh  conftest.py  powershell_test.ps1
tests/fixtures/: sample_payload.json
tests/integration/: bash_test.sh  powershell_test.ps1
tests/unit/: test_data_ingestion.py
tests/unit/data_preproccesing/: test_drop_unnecessary_columns.py
tests/unit/data_preprocessing/: test_drop_unnecessary_columns.py  test_map_diagnosis_to_numerical.py
tests/unit/model/data_ingestion/: test_data_ingestion.py
tests/unit/model/data_preprocessing/: test_drop_unnecessary_columns.py  test_map_diagnosis_to_numerical.py  test_prepare_features_and_target.py
tests/unit/model/model_inference/: test_load_pipeline.py  test_predict.py
tests/unit/model/model_training/: test_train_and_save_pipeline.py
tests/unit/model/pipeline_utils/: test_create_breast_cancer_pipeline.py
