[project]
name = "breast-cancer-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=22.0.0",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
]
